<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".view.HomeActivity"
    tools:ignore="Overdraw">

    <!-- loading -->
    <LinearLayout
        android:id="@+id/ly_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:elevation="2dp"
        android:gravity="center"
        android:visibility="visible"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/loading_logo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/app_name"
            android:src="@mipmap/splash_app"
            app:layout_constraintBottom_toTopOf="@id/loading_progress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <ProgressBar
            android:id="@+id/loading_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loading_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/cargando_por_favor_espera"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loading_progress" />

    </LinearLayout>

    <!-- no network -->
   <LinearLayout
       android:id="@+id/ly_error_network"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:visibility="gone"
       android:gravity="end"
       android:elevation="3dp">

       <com.airbnb.lottie.LottieAnimationView
           android:layout_width="100dp"
           android:layout_height="100dp"
           android:elevation="2dp"
           android:scaleX="1"
           android:background="@drawable/drw_bg_icon_circle"
           android:clipToOutline="true"
           android:layout_margin="20dp"
           app:lottie_autoPlay="true"
           app:lottie_loop="true"
           app:lottie_rawRes="@raw/lottie_dino_404"
           tools:targetApi="s" />

   </LinearLayout>

    <!-- Home -->
    <ScrollView
        android:id="@+id/ly_home_section"
        android:layout_height="0dp"
        android:layout_width="0dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/ly_details_section"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/drw_home_bg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/nuevos_estrenos"
                android:textColor="@color/text_dark"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_movies_now_playing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/peliculas_populares"
                android:textColor="@color/text_dark"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_movies_popular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/mejores_puntuadas"
                android:textColor="@color/text_dark"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_movies_top_rated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/proximamente"
                android:textColor="@color/text_dark"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_movies_upcoming"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp" />

        </LinearLayout>

    </ScrollView>

    <!-- Details -->
    <ScrollView
        android:id="@+id/ly_details_section"
        android:layout_height="0dp"
        android:layout_width="0dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/ly_favorites_section"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ly_home_section"
        android:background="@drawable/drw_bg_rounded">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_details_backdrop"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:contentDescription="@string/details_backdrop"
                android:scaleType="fitXY"
                android:src="@mipmap/peli_backdrop" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_details_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:text="@string/fight_club"
                    android:textSize="25sp"
                    android:textAlignment="center"
                    android:textColor="@color/text_dark"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tv_details_genres"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="10dp"
                    android:text="@string/accion_thriller_otros"
                    android:textSize="16sp"
                    android:textAlignment="center"
                    android:textColor="@color/text_dark" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="15dp"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/tv_details_vote_average"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/_5_10"
                            android:textSize="25sp"
                            android:textAlignment="center"
                            android:textColor="@color/text_dark"
                            android:textStyle="bold"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/vote_average"
                            android:textSize="16sp"
                            android:textAlignment="center"
                            android:textColor="@color/text_dark"/>
                    </LinearLayout>

                    <View
                        android:layout_width="30dp"
                        android:layout_height="match_parent"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/tv_details_vote_count"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/_12354"
                            android:textSize="25sp"
                            android:textAlignment="center"
                            android:textColor="@color/text_dark"
                            android:textStyle="bold"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/vote_count"
                            android:textSize="16sp"
                            android:textAlignment="center"
                            android:textColor="@color/text_dark"/>
                    </LinearLayout>

                    <View
                        android:layout_width="20dp"
                        android:layout_height="match_parent"/>

                    <ImageButton
                        android:id="@+id/iv_details_favorite"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:contentDescription="@string/favorites_icon"
                        android:src="@drawable/drw_home_icon_favorites"
                        android:backgroundTint="@color/transparent"/>

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:text="@string/synopsis"
                    android:textSize="16sp"
                    android:textColor="@color/text_dark"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tv_details_overview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lorem_ipsum"
                    android:textSize="16sp"
                    android:textColor="@color/text_dark" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <!-- Favorites -->
    <LinearLayout
        android:id="@+id/ly_favorites_section"
        android:layout_height="0dp"
        android:layout_width="0dp"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/ly_home_actions_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ly_details_section"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/drw_home_bg">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/peliculas_favoritas"
            android:textColor="@color/text_dark"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_movies_favorite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp" />

    </LinearLayout>

    <!-- status bar -->
    <LinearLayout
        android:id="@+id/ly_home_actions_bar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/transparent"
            android:contentDescription="@string/hom_icon"
            android:onClick="displayHome"
            android:padding="0dp"
            android:src="@drawable/drw_home_icon_home" />
        <View
            android:layout_width="30dp"
            android:layout_height="match_parent"/>
        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/favorites_icon_desc"
            android:onClick="displayFavorites"
            android:src="@drawable/drw_home_icon_favorites"
            android:backgroundTint="@color/transparent"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>