<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="250dp"
    android:layout_width="150dp"
    android:backgroundTint="#D8E2E4"
    app:cardElevation="0dp"
    app:cardCornerRadius="25dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="1dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/card_movie_image"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/card_movie_image"
                android:clipToOutline="true"
                android:elevation="4dp"
                android:scaleType="fitXY"
                android:background="@drawable/drw_home_bg_card"
                android:src="@mipmap/peli"
                tools:targetApi="s" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="10dp"
                android:elevation="4dp"
                android:background="@drawable/drw_home_bg_card"
                android:orientation="vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="4dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/drw_line_pointed"/>

                <TextView
                    android:id="@+id/card_movie_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_24_20_2525"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="11sp" />

                <TextView
                    android:id="@+id/card_movie_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/bar_code_font"
                    android:padding="3dp"
                    android:scaleX="1.5"
                    android:text="@string/_640146"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="30sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:elevation="4dp"
            android:gravity="bottom">

            <ImageView
                android:layout_width="23dp"
                android:layout_height="33dp"
                android:layout_marginBottom="62dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/drw_semicircle_left" />

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <ImageView
                android:layout_width="23dp"
                android:layout_height="33dp"
                android:layout_marginBottom="62dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/drw_semicircle_right" />

        </LinearLayout>

    </RelativeLayout>


</androidx.cardview.widget.CardView>